# fire-hazard-detection-system

./: README.md
.github/workflows/: cv-server-image.yaml  cv-training-image.yaml  reusable-docker.yaml
computer-vision/: README.md  pyproject.toml
computer-vision/config/: dfire.yml
computer-vision/infrastructure/: README.md  helmfile.yaml  nvidia-gpu-operator.values.yaml  test-gpu.yaml
computer-vision/notebooks/: camera.ipynb  lepton_frame_16.tiff  yolo11.ipynb
computer-vision/scripts/: extract_dfire_dataset.sh
computer-vision/server/: .gitignore  Dockerfile  Dockerfile.jetpack  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  test_client.py
computer-vision/server/lib/: __init__.py  config.py  event_streaming.py  ir_detection.py  rgb_detection.py  video_streaming.py  video_writer.py  yolo_detection.py
computer-vision/training/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
image-processing/: .gitignore  README.md  pyproject.toml
image-processing/notebooks/: camera.ipynb  yolo11.ipynb
iot/co2_sensor_module_v2/: co2_sensor_module_v2.ino
iot/demo/: receiver.py  sender.py
iot/mq7_co2_sensor/: mq7_co2_sensor.ino
iot/robot_module/: main.py  serial_listener.py
iot/test_lora_performance/: test_lora_performance.ino
robot/: CMakeLists.txt  IR_cam.ipt  README.md  makefile  package.xml  webcam.ipt
robot/3D files/: IR_cam.stl  holder.stl  webcam.stl  webcam_case.stl
robot/scripts/: __init__.py  callbacks.py  global_vars.py  main.py  mock_search_server.py  motion.py  navigation.py  node.py  (+4 more)
(+12 files in other folders)
